Fix alignement boutons formulaire dossier

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1241,6 +1241,6 @@ dl.champ_effectif_camping dd input {
     width: 139px;
 }
 
-form .btn {
+#dossierInfos form .btn {
     margin-bottom: 10px;
 }
